Correccion de errores

--- a/Ejercicio05/src/main/webapp/error.html
+++ b/Ejercicio05/src/main/webapp/error.html
@@ -2,9 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Error</title>
+<link rel="stylesheet" href="css\estilos.css"/>
 </head>
 <body>
+<h1>Se ha producido un error</h1>
+<h1>Usuario o contraseña incorrectos</h1>
+<a href="index.html"><h2>Link a la pagina de inicio</h2></a>
 
 </body>
 </html>
