--- a/Ejercicio05/src/main/webapp/index.html
+++ b/Ejercicio05/src/main/webapp/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Pagina inicio</title>
 
-<link rel="stylesheet" href="css\estilos.css">
+<link rel="stylesheet" href="css\estilos.css"/>
 </head>
 <body>	
 	<div>
@@ -14,10 +14,10 @@
 	</div>
 	<div>
 		<h1>Log in</h1>
-		<form action="Formulario" method="get">
+		<form action="Formulario" method="post">
 			Usuario: <input type="text" name="usuario"/>
 			<br/>
-			Contraseña: <input type="text" name="password"/>
+			Contraseña: <input type="password" name="password"/>
 			<input type="submit" value="Entrar"/>
 	</form>
 	</div>
